Setting up eslint

--- a/package.json
+++ b/package.json
@@ -7,10 +7,15 @@
     "start": "parcel index.html",
     "build": "parcel build index.html --dist-dir ./dist"
   },
-  "author": "Jonas Schedtmann",
+  "author": "Mohamed Boutarbouch",
   "license": "ISC",
   "devDependencies": {
     "@parcel/transformer-sass": "^2.2.1",
+    "eslint": "^7.32.0",
+    "eslint-config-standard": "^16.0.3",
+    "eslint-plugin-import": "^2.25.4",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^5.2.0",
     "fractional": "^1.0.0",
     "parcel": "^2.0.0-beta.1",
     "sass": "^1.26.10"
