--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,16 +1,16 @@
-module.exports = {
-    env: {
-        browser: true,
-        es2021: true,
+{
+    "env": {
+        "browser": true,
+        "es2021": true
     },
-    extends: [
-        "airbnb-base",
+    "extends": [
+        "standard"
     ],
-    parserOptions: {
-        ecmaVersion: 13,
-        sourceType: "module",
+    "parserOptions": {
+        "ecmaVersion": "latest",
+        "sourceType": "module"
     },
-    rules: {
+    "rules": {
         "no-console": "off",
         "no-unused-vars": "warn",
         "quotes": ["error", "double"],
@@ -26,6 +26,6 @@ module.exports = {
         "no-restricted-syntax": 0,
         "arrow-parens": 0,
         "max-len": 0,
-        "no-alert": 0,
-    },
-};
+        "no-alert": 0
+    }
+}
